# featherweight-nanomsg

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  configure.ac
perf/: inproc_lat.c  inproc_thr.c  local_lat.c  local_thr.c  remote_lat.c  remote_thr.c
src/: CMakeLists.txt  nn.h  protocol.h  transport.h
src/aio/: ctx.c  ctx.h  fsm.c  fsm.h  poller.c  poller.h  poller_kqueue.inc  stream.h  timer.c  timerset.c  usock.c  usock.h  usock_posix.inc  usock_win.inc  worker.c  worker.h  worker_posix.inc  worker_win.inc
src/core/: ep.c  ep.h  epbase.c  global.c  pipe.c  poll.c  sock.c  sock.h  sockbase.c  symbol.c
src/devices/: device.c
src/protocols/bus/: bus.c  xbus.c
src/protocols/pair/: xpair.c
src/protocols/pipeline/: xpull.c  xpush.c
src/protocols/pubsub/: trie.c  xpub.c  xsub.c
src/protocols/reqrep/: rep.c  req.c  req.h  task.c  task.h  xrep.c  xreq.c
src/protocols/survey/: respondent.c  surveyor.c  xrespondent.c  xsurveyor.c
src/protocols/utils/: dist.c  excl.c  fq.c  lb.c  priolist.c
src/transports/inproc/: binproc.c  binproc.h  cinproc.c  ins.c  msgqueue.c  msgqueue.h  sinproc.c  sinproc.h
src/transports/ipc/: aipc.c  aipc.h  bipc.c  cipc.c  ipc.c  sipc.c  sipc.h  uipc.c  uipc.h
src/transports/stream/: astream.c  astream.h  bstream.c  bstream.h  cstream.c  cstream.h  sstream.c  sstream.h  ustream.c  ustream.h
src/transports/tcp/: atcp.c  atcp.h  btcp.c  ctcp.c  stcp.c  stcp.h  tcp.c  utcp.c  utcp.h
src/transports/utils/: backoff.c  backoff.h  dns.c  dns.h  dns_getaddrinfo.inc  dns_getaddrinfo_a.inc  literal.c  streamhdr.c  usock_posix.c
src/transports/ws/: aws.c  aws.h  bws.c  cws.c  sws.c  sws.h  ws.c  ws_handshake.c  ws_handshake.h
src/utils/: alloc.c  atomic.c  chunk.c  clock.c  closefd.c  cont.h  efd.c  efd.h  efd_win.inc  err.c  err.h  hash.c  list.c  list.h  mutex.c  mutex.h  queue.c  queue.h  random.c  sem.c  sem.h  sleep.c  sleep.h  stopwatch.c  stopwatch.h  thread.c  thread.h  thread_win.inc  win.h  wire.h
tests/: async_shutdown.c  block.c  bug328.c  bus.c  cmsg.c  device.c  device4.c  device5.c  device6.c  device7.c  domain.c  emfile.c  hash.c  impatient_req.c  inproc.c  inproc_shutdown.c  iovec.c  ipc.c  ipc_shutdown.c  list.c  msg.c  msgalloc.c  pair.c  pipeline.c  poll.c  prio.c  pubsub.c  reqrep.c  reqrep_cancellation.c  reqttl.c  separation.c  shutdown.c  stats.c  stress_pipeline.c  stress_pubsub.c  stress_shutdown.c  survey.c  surveyttl.c  symbol.c  tcp.c  (+10 more)
tools/: options.c
